revised after Ian's comments

--- a/hobbies/hiking.html
+++ b/hobbies/hiking.html
@@ -41,11 +41,11 @@
             <hr>
             
             <p>
-                Having determination is essential for me to handle multiple tasks in my academic or professional activities. Hiking is such an activity that greatly challenges my determination, and it provides me the determination that I need in doing my daily tasks. Every time when I hike to the top of the mountain with determination, I will be rewarded by stunning views on the top of the mountain. In my life, it symbolizes that my efforts would be rewarded if I continue to "hike" through my life with determination.  
+                Having determination is essential for me to handle multiple tasks in my academic and professional activities. Hiking is an activity that greatly challenges my determination, and it provides me the determination that I need to do my daily tasks. Every time when I hike to the top of a mountain with determination, I am rewarded with stunning views on the top of the mountain. In my life, this symbolizes that my efforts are rewarded if I continue to "hike" through my life with determination.  
             </p>
 
             <p>
-                One of the mountains that I am particularly interested is the <a href="http://www.sabahparks.org.my/index.php/the-climb/mount-kinabalu">Mount Kinabalu</a> in Sabah, East Malaysia. It is a world heritage, and the height of the summit above the sea level is 4,095 m. The hike can be challenging and some climbers may experience altitude sickness. For this reason, it is the regulation of Sabah Park for climbers to be accompanied by accredited local mountain guides at all times. Those climbers who successfully reach the summit will be given a certificate for their accomplishments. 
+                One of the mountains that I am particularly interested in is <a href="http://www.sabahparks.org.my/index.php/the-climb/mount-kinabalu">Mount Kinabalu</a> in Sabah, East Malaysia. It is a world heritage site, and the height of the summit is 4,095 m above the sea level. The hike can be challenging and some climbers may experience altitude sickness. For this reason, it is a regulation of Sabah Park for climbers to be accompanied by accredited local mountain guides at all times. Those climbers who successfully reach the summit will be given a certificate for their accomplishments. 
             </p>
 
             <div class="container">
@@ -113,7 +113,7 @@
             </div>
 
             <p>
-                Living in Canada provides me another opportunity to explore the well-known Canadian rockies, which is a different hike experience during the winter season. Seeing mountains covered with snow is just an amazing experience for me, and integrating myself with this beautiful scenary helps me to appreciate the mother nature better. Indirectly, it makes me feel proud to become an engineering reseacher because I have a chance to contribute in shaping a cleaner and more sustainable environment so that future generations can also experience this beautiful mother nature.    
+                Living in Canada provides me another opportunity to explore the well-known Canadian Rockies, which is a different hiking experience during the winter season. Seeing mountains covered with snow is just an amazing experience for me, and integrating myself with this beautiful scenery helps me to better appreciate the mother nature. Indirectly, it makes me feel proud to become an engineering researcher because I have the chance to contribute in shaping a cleaner and more sustainable environment so that future generations can also experience this beautiful mother nature.    
             </p>
 
             <div class="container">
