--- a/hobbies/music.html
+++ b/hobbies/music.html
@@ -42,15 +42,15 @@
             <hr>
 
             <p>
-                In my belief, people of various ethnicities can be integrated easily via two types of platforms: music and sport! I grew up in a multicultural environment where I witnessed music serves as a common language that is sufficiently powerful to connect people of various backgrounds. I myself have enjoyed playing musical instruments with other cultural groups, and sometimes I have a pleasure to sing my cultural songs with musical instruments played by other cultural groups. 
+                It is my belief that people of various ethnicities can be integrated easily via two types of platforms: music and sports! I grew up in a multicultural environment where I witnessed music serving as a common language that is sufficiently powerful to connect people of various backgrounds. I myself have enjoyed playing musical instruments with other cultural groups, and sometimes I have the pleasure of singing my cultural songs with musical instruments played by other cultural groups. 
             </p>
             <p>
-                Music is also a tool that promotes life balance and maintains personal wellness. It is important to recognize that everyone needs good mental health regardless of their cultures. Listening to music could enhance personal well being and create excitement, and it is common to see people of different races come together whenever there is a musical event. As for me, playing music with my community introduces a mental healing for me, 
-                and I believe having personal wellness is crucial to help me execute my mission statement better of serving my communnity. One could not effectively serve other people without having good mental health and wellness for themselves.    
+                Music is also a tool that promotes life balance and maintains personal wellness. It is important to recognize that everyone needs good mental health regardless of their culture. Listening to music can enhance personal well being and create excitement. It is common to see people of different races come together whenever there is a musical event. As for me, playing music with my community provides mental healing for me, 
+                and I believe having personal wellness is crucial to help me execute my mission statement better of serving my community. One cannot effectively serve other people without having good mental health and wellness for themselves.    
             </p>
             
             <p>
-                Since I believe music is a strong tool for community wellness and integration, I have been coaching people in my community on music, from children to adults, particularly in piano and choir singing. I have served as a conductor, pianist, vocalist, choir member, and musical play director, and it is my passion to consistently create platforms that would utilize people's musical talents. Some of my past activities that allowed me to create these platforms are <a href="../volunteer/cny.html">Chinese New Year</a>, <a href="../volunteer/mooncake.html">Mid-Autumn Festival</a>, <a href="../volunteer/caroling.html">Christmas Caroling</a>, 
+                Since I believe music is a strong tool for community wellness and integration, I have been coaching people in my community on music, from children to adults, particularly in piano and choir singing. I have served as a conductor, pianist, vocalist, choir member, and musical play director, and it is my passion to consistently create platforms that utilize people's musical talents. Some of my past activities that allowed me to create these platforms are the <a href="../volunteer/cny.html">Chinese New Year</a>, <a href="../volunteer/mooncake.html">Mid-Autumn Festival</a>, <a href="../volunteer/caroling.html">Christmas Caroling</a>, 
                 and <a href="../volunteer/musical.html">Musical Production</a>.    
             </p>
 
