--- a/hobbies/scuba.html
+++ b/hobbies/scuba.html
@@ -41,10 +41,10 @@
             <hr>
 
             <p>
-                I am a certified scuba diver by Professional Association of Diving Instructors (PADI), an international scuba diver training organization. I found myself particularly enjoy sport activities that require courage and self-confidence, and scuba diving is a good fit based on this personality of mine. It definitely motivates me to be more courageous. Not only that, it also helps me to motivate other first time scuba divers in my team who need courage and confidence to try their first dive. 
+                I have been certified as a scuba diver by the Professional Association of Diving Instructors (PADI), an international scuba diver training organization. I find that I particularly enjoy sports activities that require courage and self-confidence, and scuba diving is a good fit based on this personality of mine. It definitely motivates me to be more courageous. Not only that, but it also helps me to motivate other first-time scuba divers in my team who need courage and confidence to try their first dive. 
             </p>
             <p>
-                Rrelaxing myself in the water and experiencing astonishing underwater creatures help me appreciate nature and motivate me to do more to protect the environment. For this reason, I feel proud to become an engineering reseacher because I have a chance to contribute in shaping a cleaner and more sustainable environment so that future generations can also experience this beautiful mother nature.
+                Relaxing myself in the water and experiencing astonishing underwater creatures helps me appreciate nature and motivates me to do more to protect the environment. For this reason, I feel proud to become an engineering researcher because I have the chance to contribute in shaping a cleaner and more sustainable environment so that future generations can also experience this beautiful mother nature.
             </p>
 
             <p>
