--- a/teaching/thermo.html
+++ b/teaching/thermo.html
@@ -45,7 +45,7 @@
                 During my last year of <a href="../education/BSc.html">undergraduate studies</a>, I initiated a tutorial program that provided additional academic support for students outside their regular classroom schedule. This program was offered for thermodynamics, statics, engineering graphics, and principles of programming. The reason I initiated this program is that I believe having strong understanding on fundamental engineering subjects is the key to cultivate interest in engineering among junior students. This interest would then be a strong motivator to drive their academic success in their senior years later.
             </p> 
             <p> 
-                Under this program, I was teaching the subject of thermodynamics, and other subjects were led by other volunteers. There were about 60 students who took thermodynamics with different instructors on campus participated in my weekly tutorial classes.
+                Under this program, I was teaching the subject of thermodynamics, and other subjects were led by other volunteers. There were about 60 students, who took thermodynamics with different instructors on campus, participated in my weekly tutorial classes.
             </p>
             <div class="container">
                 <div class="row">
