--- a/travel/Brazil.html
+++ b/travel/Brazil.html
@@ -44,7 +44,7 @@
             </h6> 
 
             <p>
-                I visited Brazil as an excursion trip after attending World Youth Day in <a href="../travel/Panama.html">Panama</a>. This trip has certainly allowed me to experience and appreciate some extraordinary hospitality offered by local Brazillians. I visited S&#227;o Paolo, the most populated city in Brazil, and my trip in S&#227;o Paolo was hosted by Cesar Alves, who has attended the World Youth Day in Panama with me. S&#227;o Paolo is huge, i.e. I was able to meet with other new Brazillian friends and even join them for some of the local activities. 
+                I visited Brazil as an excursion trip after attending World Youth Day in <a href="../travel/Panama.html">Panama</a>. This trip has certainly allowed me to experience and appreciate some extraordinary hospitality offered by local Brazilians. I visited S&#227;o Paolo, the most populated city in Brazil, and my trip in S&#227;o Paolo was hosted by Cesar Alves, who attended the World Youth Day in Panama with me. S&#227;o Paolo is huge, and so I was able to meet with other new Brazillian friends and even join them for some of the local activities. 
             </p>
 
             <div class="container">
@@ -80,7 +80,7 @@
             </div>
 
             <p style="margin-top: 0px;">
-                Another city that I have visited is Rio de Janeiro, the city that hosted World Youth Day in 2013 and Olympic Games in 2016. My trip to Rio was fortunately hosted by Renato Vasconcellos, a new Brazillian friend of mine, for a few nights. We shared our stories and cultures together, and I have also had opportunities to visit a lot of local attractions in this city, including the statue of Christ the Redeemer, which is one of the seven wonders of the world. 
+                Another city that I visited is Rio de Janeiro, the city that hosted the World Youth Day in 2013 and the Olympic Games in 2016. My trip to Rio was fortunately hosted by Renato Vasconcellos, a new Brazilian friend of mine, for a few nights. We shared our stories and cultures together, and I also had opportunities to visit a lot of local attractions in this city, including the statue of Christ the Redeemer, which is one of the seven wonders of the world. 
             </p>
 
 
