--- a/travel/France.html
+++ b/travel/France.html
@@ -45,7 +45,7 @@
             </h6> 
 
             <p>
-               This is a simple excursion trip after I completed my research exchange program in <a href="../travel/England.html">England</a>. I took a train from London to Paris, which travelled under the English Channel. During this trip, I was fortunate to be hosted by Oussama, a young engineer originally from Lebanon and studying finance in Paris. He also has knowledge in other fields such as stock trading and photography. I was glad to stay with him for a week to learn more about middle eastern culture and also some knowledge in photography. With his guidance, I also managed to travel to a lot of local attractions in Paris, and thanks him for taking some nice photos taken with his professional camera.  
+               This was a simple excursion trip after I completed my research exchange program in <a href="../travel/England.html">England</a>. I took a train from London to Paris, which involves travelling under the English Channel. During this trip, I was fortunate to be hosted by Oussama, a young engineer originally from Lebanon who is studying finance in Paris. He also has knowledge in other fields such as stock trading and photography. I was glad to stay with him for a week to learn more about middle eastern culture and also to gain some knowledge in photography. With his guidance, I also managed to travel to a lot of local attractions in Paris, and to thanks him I got some nice photos taken with his professional camera.  
             </p>
 
             <div class="container">
@@ -79,7 +79,7 @@
             </div>
 
             <p>
-                Another thing that surprised me during this trip was an old friend of mine, Victor Tee, coincidentally visited Paris at the same time while I was visiting. He is a friend whom I met at the Church of the Holy Family and have not met for years after he went to China to pursue his Master's Degree. This Paris trip was then also become a precious reunion time with him - travelling has never stopped surprising me.   
+                Another thing that surprised me during this trip was an old friend of mine, Victor Tee, coincidentally visited Paris at the same time while I was visiting. He is a friend whom I met at the Church of the Holy Family and have not met for years after he went to China to pursue his Master's Degree. This Paris trip therefore also resulted in precious reunion time with him - travelling has never stopped surprising me.   
             </p>
 
             <div class="container">
