--- a/travel/Italy.html
+++ b/travel/Italy.html
@@ -44,11 +44,11 @@
             </h6> 
 
             <p>
-                My first visit to Italy was during the time before I flew from Malaysia to Canada for my <a href="../education/MSc.html">M.Sc. studies</a>. Since that was during the winter, it is common that my destination city Saskatoon has extreme weather with -30&#8451;. Could you imagine the challege of flying from Malaysia with 30&#8451; to a city with -30&#8451;? Thankfully, Carlo Ranzato invited me to Italy to take a break before I flew to Canada. Italy was a good mid-point stop for me to adjust the huge temperature and time zone differences between Malaysia and Canada.    
+                My first visit to Italy was in the middle of flying from Malaysia to Canada for my <a href="../education/MSc.html">M.Sc. studies</a>. Since that was during the winter, it is common that my destination city Saskatoon has extreme weather with -30&#8451;. Could you imagine the challege of flying from Malaysia at 30&#8451; to a city at -30&#8451;? Thankfully, Carlo Ranzato invited me to Italy to take a break before I flew to Canada. Italy was a good mid-point stop for me to adjust to the huge temperature and time zone differences between Malaysia and Canada.    
             </p>
 
             <p>
-                Italy was the first country that I have seen snow in my life. Carlo understood that as a person coming from Malaysia, seeing snow would be something very excited for me. On my first three days arriving in Italy, I was invited to a youth camp on a mountain in Cesuna. On the top of this mountain, there is beautiful winter scenary which I could appreciate as someone who has never experienced winter.  
+                Italy was the first country where I saw snow in my life. Carlo understood that as a person coming from Malaysia, seeing snow would be something very excited for me. On my first three days arriving in Italy, I was invited to a youth camp on a mountain in Cesuna. On the top of this mountain, there is beautiful winter scenery which I was able to appreciate as someone who has never experienced winter.  
             </p>
 
             <div class="container">
@@ -70,13 +70,13 @@
                 </div>
             </div>
             <p>
-                Of course, something which is more valuable than the stunning winter views are the friendships that I have made during this youth camp. I spent time with many Grade 8 students in this camp to learn their cultures and lives. Don Giuliano Piovan, a priest in Piove di Sacco, is the leader in this group. His team also invited some refugees from Libya to this camp to share their tough lives. This sharing has triggered the empathy among many youths attending this sharing, which helped them to appreciate their lives better. 
+                Of course, something which is more valuable than the stunning winter views are the friendships that I made at this youth camp. I spent time with many Grade 8 students in this camp to learn their cultures and lives. Don Giuliano Piovan, a priest in Piove di Sacco, is the leader in this group. His team also invited some refugees from Libya to this camp to share stories of their tough lives. This sharing triggered the empathy among many youths attending this camp, which helped them better appreciate their lives. 
             </p>
 
             <p>
-                After this camp, I was invited to Carlo's family in Piove di Sacco to stay for a week where I learned a lot about the Italian culture. I visited Venice with his family members, and Don Giuliano has also invited me to visit his church and some local attractions nearby. What touched my heart the most was, Don Giuliano's team collaborated with Don Paolo Zaramella, a priest in Padua, to organize a new year party in Padua for refugees. I was also invited to join the refugees and his team in this lovely new year celerbation. Having new year party with the Italian community and those refugees, whose cultures are different than mine, made me recall my lovely time in Malaysia, where I also organized <a href="../volunteer/cny.html">Chinese New Year dinner</a> that involved other cultural groups.  
+                After this camp, I was invited to Carlo's family in Piove di Sacco to stay for a week where I learned a lot about the Italian culture. I visited Venice with his family members, and Don Giuliano also invited me to visit his church and some local attractions nearby. What touched my heart the most was that Don Giuliano's team collaborated with Don Paolo Zaramella, a priest in Padua, to organize a new year's party in Padua for refugees. I was also invited to join the refugees and his team in this lovely new year's celebration. Having a new year's party with the Italian community and those refugees, whose cultures are different than mine, made me recall my lovely time in Malaysia, where I also organized <a href="../volunteer/cny.html">Chinese New Year dinner</a> that involved other cultural groups.  
             <p>
-                After visiting Carlo and Don Giuliano, I also took opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy - Rome, before I departed to Canada to begin my new chapter of life. 
+                After visiting Carlo and Don Giuliano, I also took the opportunity to visit other cities in Italy, including Florence, Pisa, and the capital of Italy - Rome, before I departed to Canada to begin the new chapter of my life. 
             </p>
 
             <div class="container">
