--- a/travel/Mexico.html
+++ b/travel/Mexico.html
@@ -44,7 +44,7 @@
             </h6> 
 
             <p>
-                This was my longest overseas trip ever before 2020. The main purpose for me to visit Mexico is to do a simple pilgrimage. I intended to visit the Basilica of Our Lady of Guadalupe in Mexico City. This is an important pilgrimage site where Catholics believe the Mother of Christ has appeared on this land in 1531 and promised to bring consolation and healing to people. During her apparition, the image of Our Lady surprisingly displayed on a cloak of a local farmer Juan Diego. 
+                At this time, this was my longest overseas trip ever. The main purpose for me to visit Mexico is to engage in a simple pilgrimage. I intended to visit the Basilica of Our Lady of Guadalupe in Mexico City. This is an important pilgrimage site where Catholics believe the Mother of Christ has appeared in 1531 and promised to bring consolation and healing to people. During her apparition, the image of Our Lady surprisingly displayed on a cloak of a local farmer Juan Diego. 
             </p>
 
             <div class="container">
@@ -76,7 +76,7 @@
             </div>
 
             <p>
-                I met a young man named Missael during this trip, who has brought me to visit many local attractions in or nearby Mexico City, including the Pyramid of the Sun in Teotihuac&#225;n and National Autonomous University of Mexico (UNAM). Since it is my intention to engage with the local community during my travels, I also spent a night with Missael at a humble village where his relatives live in Toluca. 
+                I met a young man named Missael during this trip, who brought me to visit many local attractions in and around Mexico City, including the Pyramid of the Sun in Teotihuac&#225;n and the National Autonomous University of Mexico (UNAM). Since it is my intention to engage with the local community during my travels, I also spent a night with Missael at a humble village in Toluca where his relatives live. 
             </p>
 
             <div class="container">
@@ -102,7 +102,7 @@
             </div>
 
             <p>
-                Many people told me that Mexico City is huge and there are a lot of places to visit. Indeed, it has a lot to offer. Most importantly for me, I was amazed by the hospitality offered by Mexicans, similar to what I have experienced before in other Latin American countries. Meeting more new Mexican friends from this trip is definitely a valuable gift for me.    
+                Many people told me that Mexico City is huge and there are a lot of places to visit. Indeed, it has a lot to offer. Most importantly for me, I was amazed by the hospitality offered by Mexicans, similar to what I have experienced before in other Latin American countries. Meeting more Mexican friends from this trip is definitely a valuable gift to me.    
             </p>
 
             <div class="container">
