--- a/travel/Panama.html
+++ b/travel/Panama.html
@@ -44,7 +44,7 @@
             </h6> 
 
             <p>
-                I visited Panama to attend the second World Youth Day in my life. My first World Youth Day was in <a href="../travel/Poland.html">Poland</a> in 2016. Attending world youth day in Panama has allowed me to reach out to more people with different nationalities. On top of that, I was also able to reunite with some friends that I have met in my first World Youth Day, including Carlo who has hosted me in <a href="../travel/Italy.html">Italy</a> before.
+                I visited Panama to attend the second World Youth Day in my life. My first World Youth Day was in <a href="../travel/Poland.html">Poland</a> in 2016. Attending world youth day in Panama has allowed me to reach out to more people with different nationalities. On top of that, I was also able to reunite with some friends that I met in my first World Youth Day, including Carlo who has hosted me in <a href="../travel/Italy.html">Italy</a> before.
             </p>
 
             <div class="container">
@@ -61,7 +61,7 @@
             </div>
 
             <p>
-                Recall that World Youth Day is about appreciating simplicity, and it is common to have millions of youths sleeping on a field a night before  the closing ceremony. By experiencing this simplicity, this event has again motivated me to appreciate life and demonstrate empathy to other vulnerable people. In addition, World Youth Day has never failed to help me reach out to more people of different languages and backgrounds. Isn't amazing to participate in an event where people are integrated together regardless of their nationalities and cultures?
+                Recall that World Youth Day is about appreciating simplicity, and it is common to have millions of youths sleeping on a field the night before the closing ceremony. By experiencing this simplicity, this event has again motivated me to appreciate life and demonstrate empathy to other vulnerable people. In addition, World Youth Day has never failed to help me reach out to more people of different languages and backgrounds. Isn't it amazing to participate in an event where people are integrated together regardless of their nationalities and cultures?
             </p>
 
             <div class="container">
@@ -91,7 +91,7 @@
             </div>
 
             <p>
-                After the World Youth Day, I took opportunity to visit some local attractions in Panama, including an artificial canal that links between the Pacific Ocean and the Atlantic Ocean. This place is very popular, and it is common to have another opportunity to meet with people from other countries visiting the same place. 
+                After the World Youth Day, I took an opportunity to visit some local attractions in Panama, including an artificial canal that links the Pacific Ocean with the Atlantic Ocean. This place is very popular, and it is easy to meet with people from other countries visiting the same place. 
             </p>
             
             <div class="container">
