--- a/travel/Poland.html
+++ b/travel/Poland.html
@@ -44,11 +44,11 @@
             </h6> 
 
             <p>
-                This is my first trip going far away from my country, and therefore it was a very excited one. I visited Poland to attend World Youth Day 2016. It was an international event organized every 2 or 3 years where youths from all over the world gather together for fellowship and spiritual purposes. Well, it is called World Youth "Day", but the program is 1 to 2-week long.      
+                This is my first trip going far away from my country, and therefore it was a very exciting one. I visited Poland to attend World Youth Day 2016. It is an international event organized every 2 or 3 years where youths from all over the world gather together for fellowship and spiritual purposes. Well, it is called World Youth "Day", but the program is 1 to 2-week long.      
             </p>
 
             <p>
-                I was part of the Malaysian team to join this amazing event, which has left a life-time memory for me. A week before the World Youth Day, we were fortunate to be hosted by different local families and staying together with them for a week.
+                I was part of the Malaysian team to join this amazing event, which has left lifelong memories for me. A week before the World Youth Day, we were fortunate to be hosted by different local families and stayed together with them for a week.
             </p>
 
             <div class="container">
@@ -79,7 +79,7 @@
             </div>
 
             <p>
-                During our stay with these host families, our team joined them to explore some local attractions. Hiking was my favourite activity during my visit here :) Each day, we spent lots of time in fellowship and meal sharing. Coincidently, during my stay with them, I had my first ever birthday in overseas. I really had a good birthday celebration here with more than 10 birthday songs sung. I truly appreciate their hospitality, and they have certainly motivated me to welcome people who visiting my city as well. 
+                During our stay with these host families, our team joined them to explore some local attractions. Hiking was my favourite activity during my visit there :) Each day, we spent lots of time in fellowship and shared meal together. Coincidently, during my stay with them, I had my first ever birthday overseas. I really had a good birthday celebration there with more than 10 birthday songs sung. I truly appreciate their hospitality, and they have certainly motivated me to welcome people who visit my city as well. 
             </p>
 
             <div class="container">
@@ -109,7 +109,7 @@
             </div>
 
             <p>
-                After a week of stay with the Domasik family, we moved to Krak&#243;w to attend the World Youth Day. Since this is an event attended by millions of people, it is common to have a simple accommodation and transportation in the event site. For example, during the last day of the World Youth Day, participants were sleeping in a large field with sleeping beg to wait for the closing ceremony (it is not possible to have luxury accommodation for millions in a limited space). However, this simplicity has really taught me a lot about humility, and it is definitely something that will help me connect with more vulnerable people in the world.  
+                After a week of stay with the Domasik family, we moved to Krak&#243;w to attend the World Youth Day. Since this is an event attended by millions of people, it is common to have a basic accommodation and basic transportation to the event site. For example, during the last day of the World Youth Day, participants were sleeping in a large field with sleeping bags to wait for the closing ceremony (it is not possible to have luxurious accommodations for millions in a limited space). However, this simplicity has really taught me a lot about humility, and it is definitely something that will help me connect with more vulnerable people in the world.  
             </p>
 
             
