--- a/volunteer/cny.html
+++ b/volunteer/cny.html
@@ -49,10 +49,10 @@
         </p>
 
         <p>
-            Chinese New Year is an important festival on the first day of the Chinese Lunar calendar where Chinese people are reunited together with their families. Our group vision our community as a big spiritual family, and organizing a Chinese New Year dinner in this community provides an opportunity for our members to integrate.
+            Chinese New Year is an important festival on the first day of the Chinese Lunar calendar where Chinese people are reunited together with their families. Our group envisions our community as a big spiritual family, and organizing a Chinese New Year dinner in this community provides an opportunity for our members to integrate.
         </p>
         <p>
-            It is worth highlighting that although this annual event is Chinese-culture oriented, it has been consistenly welcoming many non-Chinese from our community to attend. Our group greatly values diversity, and we are proud of our strength to integrate people of different cultures and languages to celebrate this festival together.    
+            It is worth highlighting that although this annual event is Chinese-culture oriented, it has been consistently welcoming of many non-Chinese from our community to attend. Our group greatly values diversity, and we are proud of our strength to integrate people of different cultures and languages to celebrate this festival together.    
         </p>
 
         <div class="container">
@@ -83,10 +83,10 @@
         </h3>
         <hr>
         <p>
-            This event offers delicious chinese food at a very affordable price at RM 40 - 60 (USD 9 - 15). Thanks to our committee team who is highly experienced in financial management, i.e. obtaining sponsors, expenses optimization etc. Sometimes, our group is able to offer it at no cost with a pot-luck style dinner to allow more low-income families to join the celebration. 
+            This event offers delicious Chinese food at a very affordable price of RM 40 - 60 (USD 9 - 15). Thanks to our committee who is highly experienced in financial management, i.e. obtaining sponsors, expenses optimization, etc. Sometimes, our group is able to offer the meal at no cost with a pot-luck style dinner to allow more low-income families to join the celebration. 
         </p>
         <p>
-            While serving delicious chinese food, there were varous programs to entertain the crowd such as cultural dance, song performance, and instrumental shows. I particularly like to arrange instrumental performances where western modern instruments and eastern traditional instruments are played together to symbolize diversity and integration. As the program director, it was also part of my goals to explore different talents in my community and create performance opportunities for them in such a wonderful event. Besides working on talent aquisition for front stage performers, I also discovered those who were more comfortable to work behind the scene such as audio visual support, decoration, food supply etc. In other words, this celebration does not just provide an opportunity for reunion, integration and entertainment, it also creates platforms for many people to discover, strengthen and utilize their talents.       
+            While serving delicious Chinese food, there were various programs to entertain the crowd such as cultural dance, song performance, and instrumental shows. I particularly like to arrange instrumental performances where western modern instruments and eastern traditional instruments are played together to symbolize diversity and integration. As the program director, it was also one of my goals to explore different talents in my community and create performance opportunities for them in such a wonderful event. Besides working on talent acquisition for front stage performers, I also discovered those who were more comfortable to work behind the scenes such as audio-visual support, decoration, food supply etc. In other words, this celebration does not just provide an opportunity for reunion, integration and entertainment, it also creates platforms for many people to discover, strengthen and utilize their talents.       
         </p>
 
         <div class="container">
