--- a/volunteer/mooncake.html
+++ b/volunteer/mooncake.html
@@ -49,10 +49,10 @@
         </p>
 
         <p>
-            Mid-Autumn festival is celebrated on the 15th day of eighth month of the Chinese Lunar calendar. Similar to Chinese New Year, it is also a festival where Chinese people gather. Our group vision our community as a big spiritual family, and organizing a mid-autumn festival in this community provides an opportunity for our members to integrate.
+            Mid-Autumn Festival is celebrated on the 15th day of the eighth month of the Chinese Lunar calendar. Similar to the Chinese New Year, it is also a festival where Chinese people gather. Our group envision our community as a big spiritual family, and organizing a mid-autumn festival in this community provides an opportunity for our members to integrate.
         </p>
         <p>
-            It is worth highlighting that although this annual event is Chinese-culture oriented, it has been consistenly welcoming many non-Chinese from our community to attend. Our group greatly values diversity, and we are proud of our strength to integrate people of different cultures and languages to celebrate this festival together.  
+            It is worth highlighting that although this annual event is Chinese-culture oriented, it has been consistently welcoming of many non-Chinese from our community to attend. Our group greatly values diversity, and we are proud of our strength to integrate people of different cultures and languages to celebrate this festival together.  
         </p>
 
         <div class="container">
@@ -83,7 +83,7 @@
         </h3>
         <hr>
         <p>
-            Our group usually organizes this event in a pot-luck manner since we are confident that our community would be very generous to prepare and share their own-cooked unique food. The event is free for admissions to encourage integration. In addition, the attendees can experience various interesting entertainment such as cultural dance, song performance, and instrumental shows. Besides performances, this event also normally offers game competition, lentern design competition, lentern procession, and lucky draws!  
+            Our group usually organizes this event in a pot-luck manner since we are confident that our community is generous enough to prepare and share their home-cooked unique food. To encourage integration, the admission for this event is free. In addition, the attendees can experience various interesting entertainment such as cultural dance, song performance, and instrumental shows. Besides performances, this event also normally offers game competitions, lantern design competition, lantern procession, and lucky draws!  
         </p>
 
         <div class="container">
@@ -124,18 +124,18 @@
         </div>
 
         <p>
-            As the program director, it was also part of my goals to explore different talents in my community and create performance opportunities for them in such a wonderful event. I have coached different youth and adult musicians, and joined some of them, who have not worked together before, to offer a performance for this event. Also, I have guided children in choir singing to allow them to offer their singing talents by doing a stage performance. It is always a mutual benefits for creating performance opportunities - the performers identified their talents, the crowd get entertained.
+            As the program director, it was also one of my goals to explore different talents in my community and create performance opportunities for them in such a wonderful event. I have coached and joined different youth and adult musicians who have not worked together before to offer a performance for this event. Furthermore, I have guided children in choir singing to allow them to offer their singing talents by doing a stage performance. There is always mutual benefit in creating performance opportunities - the performers identified their talents, and the crowd get entertained.
         </p>
         <p>
-            Besides performers, this event also allowed me to identify other talents in photography, emceeing, game coordination etc. It is also equally important for me to discover more talents who were more comfortable to work behind the scene such as audio visual support, decoration, food supply etc. In other words, this celebration does not just provide an opportunity for reunion, integration and entertainment, it also creates platforms for many people to discover, strengthen and utilize their talents.
+            Besides performers, this event also allowed me to identify other talents in photography, emceeing, game coordination, etc. It is also equally important for me to discover more talented people who were more comfortable to work behind the scenes such as audio-visual support, decoration, food supply, etc. In other words, this celebration does not just provide an opportunity for reunion, integration and entertainment, it also creates platforms for many people to discover, strengthen and utilize their talents.
         </p>
 
         <h3>
-            Lentern Design Competition
+            Lantern Design Competition
         </h3>
         <hr>
         <p>
-            This program also has a competition for those who are interested in art and craft work to design their hand-made lenterns. Our group normally impose an environmental-friendly theme for this competition, i.e. participants were challenged to utilize recycable materials to create lenterns. By having this competition, I was also able to discover people with talents in art and creativity in my community.     
+            The program also has a competition for those who are interested in art and craft work to design their own hand-made lanterns. Our group normally imposes an environmental-friendly theme for this competition, i.e. participants were challenged to utilize recyclable materials to create lanterns. By having this competition, I was also able to discover people with talents in art and creativity in my community.     
         </p>
 
         <div class="container">
