--- a/teaching/f3.html
+++ b/teaching/f3.html
@@ -42,10 +42,10 @@
             <hr>
 
             <p>
-                I was serving as a lab demonstrator during my <a href="../education/MSc.html">M.Sc.</a> program. The labs that I have taught were mainly in the area of fluid mechanics, including wind energy lab, which was performed outdoor, and flow measurement lab which was performed in a wind tunnel. The lab was designed to help students strengthen their understanding in the engineering subjects of thermodynamics and fluid mechanics. 
+                I was serving as a lab demonstrator during my <a href="../education/MSc.html">M.Sc.</a> program. The labs that I taught were mainly in the area of fluid mechanics, including a wind energy lab, which was performed outdoor, and a flow measurement lab which was performed in a wind tunnel. The lab was designed to help students strengthen their understanding in the engineering subjects of thermodynamics and fluid mechanics. 
             </p>
             <p>
-                Being a lab demonstrator during my M.Sc. program is also part of the reasons why I enrolled in a professional course - <a href="../professional/GPS989.html">Philosophy and Practice of University Teaching</a> to seek continuous opportunites for improvements in teaching.
+                Being a lab demonstrator during my M.Sc. program is also part of the reasons why I enrolled in a professional course - <a href="../professional/GPS989.html">Philosophy and Practice of University Teaching</a> to seek continuous opportunities for improvements in teaching.
             </p>
 
             <h3>
@@ -54,7 +54,7 @@
             <hr>
 
             <p>
-                The figure below shows a voluntary survey answered by my students about the overall quality of the lab conducted. 94% of the students have rated the lab conducted was "very good" or "good". 
+                The figure below shows a voluntary survey answered by my students about the overall quality of the lab conducted. 94% of the students rated the lab conducted was "very good" or "good". 
             </p>
 
             <div class="paragraph big-screen-image">
