--- a/travel/England.html
+++ b/travel/England.html
@@ -44,9 +44,9 @@
             </h6> 
 
             <p>
-                I was living in England for about 3 months for a research exchange project at the University of Nottingham during my <a href="../education/MSc.html">M.Sc.</a> studies. It was the summer season during my visit to England, so I got a lot of chances to visit many local attractions as well as participate in some interesting activities organized by their local communities.
+                I was living in England for about 3 months for a research exchange project at the University of Nottingham during my <a href="../education/MSc.html">M.Sc. studies</a>. It was the summer season during my visit to England, so I got a lot of chances to visit many local attractions as well as participate in some interesting activities organized by their local communities.
             <p>
-                Since I am an engineering student, I think it is a must for me to visit the well known scientist Isaac Newton's hometown, Woolsthorpe Manor. The famous <a href="https://www.nationaltrust.org.uk/woolsthorpe-manor/features/the-story-of-our-apple-tree-at-woolsthorpe-manor">Isaac Newton's apple tree</a>, where he began to think about gravity, can be found here. 
+                Since I am an engineering student, I think it is a must for me to visit the well-known scientist Isaac Newton's hometown, Woolsthorpe Manor. The famous <a href="https://www.nationaltrust.org.uk/woolsthorpe-manor/features/the-story-of-our-apple-tree-at-woolsthorpe-manor">Isaac Newton's apple tree</a>, where he began to think about gravity, can be found here. 
             </p>
 
             <div class="container">
@@ -67,7 +67,7 @@
             </div>
 
             <p>
-                Cities that I have visited during my stay in England are: Nottingham, London, Manchester, Liverpool, Birmingham, and Grantham. Thanks to the modern public transport networks in England where I can easily book tickets and explore different cities.   
+                Cities that I visited during my stay in England were: Nottingham, London, Manchester, Liverpool, Birmingham, and Grantham. Thanks to the modern public transport networks in England where I can easily book tickets and explore different cities.   
             </p>            
 
             <div class="container">
@@ -114,7 +114,7 @@
             </div>
 
             <p>
-                My biggest gift in this trip is undoubtedly my new friends whom I have unexpectedly met throughout my stay in England. I was fortunate to be hosted by Matthew Eric, an American residing in London during my visit to London. Matthew is specialized in Mathematics and we have exchanged some knowledge and cultures together during my stay with him. Besides, there were also some local activities available to help visitors learn about some Britain history. One of the events that I attended was Manchester Invasion, where some locals were doing a creative role play to introduce the history in Manchester.
+                My biggest gift in this trip is undoubtedly my new friends whom I have unexpectedly met throughout my stay in England. I was fortunate to be hosted by Matthew Eric, an American residing in London during my visit to London. Matthew is specialized in Mathematics and we have exchanged some knowledge and cultures together during my stay with him. Besides, there were also some local activities available to help visitors learn about some Britain histories. One of the events that I attended was Manchester Invasion, where some locals were doing a creative role play to introduce the history in Manchester.
             </p>  
 
             <div class="container">
