--- a/travel/travel.html
+++ b/travel/travel.html
@@ -107,16 +107,16 @@
             </script>
 
             <p>
-                When discussing about travelling, most people could be easily connected to the topic and would likely discuss their dream vacation locations. Travelling can certainly help promote mental health and life balance as we could take a break outside of our daily routines. For me, travelling is not just for leisure; I enjoy travelling simply because that is an indirect, yet effective way to grow myself professionally to meet my mission statement. 
+                When discussing about travelling, most people could be easily connected to the topic and would likely discuss their dream vacation locations. Travelling can certainly help promote mental health and life balance as we take a break outside of our daily routines. For me, travelling is not just for leisure; I enjoy travelling simply because that is an indirect, yet effective, way to grow myself professionally to meet my mission statement. 
             </p>
             <p>
-                To meet my mission statement of integrating people, I believe some real life experiences are essential to make myself more culturally competence. I utilize my travels to reach out to different local communities across the world. Many times, I was fortunate to be hosted by locals; these opportunities of staying with locals allow me to learn their cultures and countries more effectively. These skills are essential for me to be aware of ways of doing things could be greatly impacted by someone's cultural background.   
+                To meet my mission statement of integrating people, I believe some real-life experiences are essential to make myself more culturally competent. I utilize my travels to reach out to different local communities across the world. Many times, I was fortunate to be hosted by locals; these opportunities of staying with locals allowed me to learn their cultures and countries more effectively. It also raised my awareness that people's ways of doing things can be greatly impacted by their cultural background.   
             </p>
             <p>
                 Travelling also has made myself more vulnerable to others by seeking appropriate assistance such as asking for directions and local tips. Why is this important? By making myself more vulnerable, I learned how to demonstrate empathy to other vulnerable communities. For example, my awareness on appropriate body language usage has dramatically increased when communicating with non-English speakers. These skills are undoubtedly transferrable to professional settings such as <a href="../professional/GPS989.html">teaching</a> where I greatly value vulnerability.
             </p>
             <p> 
-                Some of my casual cultural networkings with people from different countries during my travels are shown below.
+                Some of my casual and cultural networking with people from different countries during my travels are shown below.
             </p>
         
             <div class="container">
