--- a/volunteer/volunteer.html
+++ b/volunteer/volunteer.html
@@ -94,10 +94,10 @@
                         <ul style="text-align: left;">
                             <li>cultural festivals</li> 
                             <li>musical plays</li> 
-                            <li>christmas carolings</li>
+                            <li>Christmas caroling</li>
                             <li>children/youth camps</li>
                             <li>educational workshops</li> 
-                            <li>sport/recretional events</li> 
+                            <li>sport/recreational events</li> 
                         </ul>
                     <h3>
                         I've volunteered:
@@ -119,10 +119,10 @@
         </script>
 
     <p>
-        I highly value giving back to the community and reaching out to the vulnerable people, so community involvement has been part of my life for more than 10 years. It is part of my mission statement to guide more people to discover their goals, values and strengths, and volunteering in the community offers lots of opportunities for me to execute this mission. After all, it is also a great opportunity to grow leadership and enhance professional development. Moreover, my volunteer experience often contributes to my wellness; having some fun time with the community is a way for me to exercise life balance by experiencing a different social lifestyle after work. 
+        I highly value giving back to the community and reaching out to the vulnerable people, so community involvement has been part of my life for more than 10 years. It is part of my mission statement to guide more people to discover their goals, values and strengths, and volunteering in the community offers lots of opportunities for me to execute this mission. After all, it is also a great opportunity to grow leadership skills and enhance professional development. Moreover, my volunteer experience often contributes to my wellness; having some fun time with the community is a way for me to exercise life balance by experiencing a different social lifestyle after work. 
     </p>
     <p>
-        Below is the summary of my selected volunteer or leadership experience. Some organizations issued the certificates of appreciation for leadership responsibilities held, and these certificates can be view by clicking the "Access" link at the most right column. 
+        Below is the summary of my selected volunteer or leadership experience. Some organizations issued the certificates of appreciation for leadership responsibilities held, and these certificates can be view by clicking the "Access" link at the right-most column. 
         
         <table class="TFtable">
             <tr>
@@ -183,7 +183,7 @@
     </p>
 
     <p>
-        I was also awarded as the best student in extra-curricular activities involvement during my undergraduate studies at UNITEN. My extra-curricular report that highlights my student leadership and volunteer experience is available below. 
+        I was also awarded as the best student in extra-curricular activity involvement during my undergraduate studies at UNITEN. My extra-curricular report that highlights my student leadership and volunteer experience is available below. 
     </p>
 
     <div class="container">
@@ -217,28 +217,28 @@
     </h3>
     <hr>
     <p>
-        Leadership is a continuous journey, but not a destination. It is important to identify own leadership philosophy that can create mutual benefits between myself and my community. For this reason, I outlined three core principles that guide my leadership actions when leading events and activities in my community as follows: 
+        Leadership is a continuous journey, but not a destination. It is important to identify one's own leadership philosophy that can help create mutual benefits between myself and my community. For this reason, I outline three core principles that guide my leadership actions when leading events and activities in my community as follows: 
     </p>
     
     <h6>
         Casting vision and setting goals
     </h6>
     <p>
-        Clear goals lead to effective and appropriate actions. When leading events, often there is a challenge of executing multiple actions with limited resources. By having solid goals and understand what should be achieved, the team would get a clearer picture on what to priortize and avoid spending unnecessary efforts. My objective-approach strategy also assist me in evaluation processes where feedback is gathered to assess if the goals were met. If found not met, the set goals could even be motivators to trigger innovative and creative solutions that address the root cause of not meeting the goals.
+        Clear goals lead to effective and appropriate actions. When leading events, often there is a challenge of executing multiple actions with limited resources. By having solid goals and understand what should be achieved, the team can get a clearer picture on what to prioritize and avoid spending unnecessary effort. My objective-approach strategy also assists me in evaluation processes where feedback is gathered to assess if the goals were met. If found to not be met, the set goals can even be motivators to trigger innovative and creative solutions that address the root cause of not meeting the goals.
     </p> 
 
     <h6>
         Creating platforms for people
     </h6>
     <p>
-        Every person is unique with various talents and strengths. I pledge to utilize community events as platforms to discover talents in my community and how their stengths can be utilized. This is particularly important for young people who are still exploring their own interests and strengths. By giving young people more platforms and opportunities to perform, they identify their values and this would greatly motivate them to invest more efforts and time in growing their stengths. I believe leading youth to discover their values and strengths is the key to reduce criminal activities in a community.  
+        In line with my <a href="../teaching/philosophy.html">teaching philosophy statement</a>, every person is unique due to their distinct backgrounds. For this reason, each person is expected to have their own unique talents and strengths. Hence, I pledge to utilize community events as platforms to discover different talents in my community and determine how their stengths can be utilized. This is particularly important for young people who are still exploring their own interests and strengths. By giving young people more platforms and opportunities to perform, they identify their values. This can greatly motivate them to invest more efforts and time in growing their strengths. I believe leading youth to discover their values and strengths is the key to reduce criminal activities in communities.  
     </p>
 
     <h6>
         Committing to continuous learning 
     </h6>
     <p>
-        It is important to continuously enhance my knowledge in order to serve my community better. Leading events often involves a lot of communications with people of various backgrounds and talents. People from various disciplines have their unique requirements, and it is common people often seek understanding from leaders. By deepen my knowledge in more fields, it helps me connect with each team with different expertises so that I can challenge myself to integrate different requirements from each team towards a same goal. After all, it is also my belief that education is an effective tool to help vulnerable people in my community to escape from poverty.  
+        It is important to continuously enhance my knowledge in order to better serve my community. Leading events often involves a lot of communication with people of various backgrounds and talents. People from various disciplines have their unique requirements, and it is common for people to seek understanding from leaders. Deepening my knowledge in more fields helps me connect with each team that has different expertise so that I can challenge myself to integrate different requirements from each team towards the same goal. After all, it is also my belief that education is an effective tool to help vulnerable people in my community to escape from poverty.  
     </p>
 
     <p class="enter"></p>
